--- a/index.html
+++ b/index.html
@@ -4,18 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Manage Money</title>
 </head>
 <body>
+    
     <header>
-        <h3>Manage Money</h3>
+        <h1>Manage Money</h1>
     </header>
-    <section>
-            <p>
-                Somos o Manage Money um aplicativo para você poder controlar seus gastos de maneira
-                simples.
-            </p>
-            <p>
+           <p>
                 Abaixo você pode se cadastrar caso não tenha uma conta criada, ou somente entrar
                 se já possui conta no Manage Money.
             </p>
@@ -76,5 +73,45 @@
             Entrar
         </button>
     </section>
+
+    <section >
+        <h4>
+            <FONT COLOR="#000080">SOBRE NÓS</FONT>
+        </h4>
+            <p>
+                Procurando um aplicativo para controlar suas finanças?
+            </p>
+            <p>
+                Conheça o <b><FONT COLOR="#000080">Manage Money</FONT> </b>, uma solução simples, funcional e intuitiva que lhe permitirá gerenciar suas despesas e receitas. 
+            </p>
+
+            <ul>
+                <div>
+                    <li> <b>Organize suas despesas por categoria</b></li>
+                    <p>
+                        Procurando um aplicativo para controlar suas finanças?
+                    </p>
+                    <li><b>Identifique seus padrões de gastos</b></li>
+                    <p>
+                        Identificar seus padrões de gastos é o primeiro passo para conquistar uma financeira mais saudável e equilibrada.
+                    </p>
+                    <li><b>Receba notificação antes do vencimento</b></li>
+                    <p>
+                        Nunca mais pague multa e juros por atrasos! 
+                    </p>
+                    <p>
+                        Ao lançar uma despesa você poderá escolher se deseja adicionar um lembrete, recebendo uma notificação via e-mail na data anterior ao vencimento. 
+                    </p>
+                    <li><b>Defina metas</b></li>
+                    <p>
+                        Podemos te ajudar a reduzir despesas e a poupar dinheiro.
+                    </p>
+                    <li><b>Compartilhe com outros usuários</b></li>
+                    <p>
+                        Na versão paga você pode criar um grupo familiar e definir quais informações deseja compartilhar com outros usuários. 
+                    </p>
+                    </ul>
+                </div>
+
 </body>
 </html>
