--- a/index.html
+++ b/index.html
@@ -181,31 +181,31 @@
 
             <li>
                 <a href="#" target="blank">
-                    <img src="C:\Users\Sharo\Downloads\insta.png" alt="instagram">
+                    <img src="https://cdn-icons-png.flaticon.com/512/2175/2175198.png" width="50" height="50" alt="instagram">
                 </a>
             </li>
 
             <li>
                 <a href="#" target="blank">
-                    <img src="C:\Users\Sharo\Downloads\pint.png" alt="pinterest">
+                    <img src="https://cdn-icons-png.flaticon.com/512/60/60574.png" width="50" height="50" alt="pinterest">
                 </a>
             </li>
 
             <li>
                 <a href="#" target="blank">
-                    <img src="C:\Users\Sharo\Downloads\youtube.png" alt="youtube">
+                    <img src="https://paraiba.pb.gov.br/diretas/secretaria-da-mulher-e-da-diversidade-humana/imagens/youtube.png/@@images/d756f596-02fc-4fa9-aa71-6befa8ce1298.png" width="50" height="50" alt="youtube">
                 </a>
             </li>
 
             <li>
                 <a href="#" target="blank">
-                    <img src="C:\Users\Sharo\Downloads\face.png" alt="facebook">
+                    <img src="https://cdn-icons-png.flaticon.com/512/61/61045.png" width="50" height="50" alt="facebook">
                 </a>
             </li>
 
             <li>
                 <a href="#" target="blank">
-                    <img src="C:\Users\Sharo\Downloads\twter.png" alt="twiter">
+                    <img src="https://cdn-icons-png.flaticon.com/512/60/60580.png" width="50" height="50" alt="twiter">
                 </a>
             </li>
 
