--- a/index.html
+++ b/index.html
@@ -139,5 +139,63 @@
                 </p>
             </div>
     </section>
+
+    <section>
+        <h2>Contato</h2>
+        <form action="http://api.staticforms.xyz/submit" method="POST">
+            <label>Nome</label>
+            <input type="text" name="name" placeholder="Digite seu nome" autocomplete="off"
+            required>
+            <label>Email</label>
+            <input type="email" name="email" placeholder="Informe seu e-mail"
+            autocomplete="off"required>
+            <label>Mensagem</label>
+            <textarea name="message" cols="30" rows="10" placeholder="Digite a sua mensagem"
+                required></textarea>
+            <button type="submit">Enviar</button>
+            <input type="hidden" name="accessKey" value="9993bb59-06fa-4863-a472-48e0fcabc999">
+            <input type="hidden" name="redirectTo" value="URL/ip da máquina">
+        </form>
+    </section>
+
+    <h3 class="text"> Obrigado pelo contato!</h3>
+    <p class="paragrafo">Em breve entrarei em contato;)</p>
+    <a href="index.html" class="btn"> Home</a>
+    <footer class="Redes">
+        <ul>
+
+            <li>
+                <a href="#" target="blank">
+                    <img src="https://cdn-icons-png.flaticon.com/512/2175/2175198.png" width="50" height="50" alt="instagram">
+                </a>
+            </li>
+
+            <li>
+                <a href="#" target="blank">
+                    <img src="https://cdn-icons-png.flaticon.com/512/60/60574.png" width="50" height="50" alt="pinterest">
+                </a>
+            </li>
+
+            <li>
+                <a href="#" target="blank">
+                    <img src="https://paraiba.pb.gov.br/diretas/secretaria-da-mulher-e-da-diversidade-humana/imagens/youtube.png/@@images/d756f596-02fc-4fa9-aa71-6befa8ce1298.png" width="50" height="50" alt="youtube">
+                </a>
+            </li>
+
+            <li>
+                <a href="#" target="blank">
+                    <img src="https://cdn-icons-png.flaticon.com/512/61/61045.png" width="50" height="50" alt="facebook">
+                </a>
+            </li>
+
+            <li>
+                <a href="#" target="blank">
+                    <img src="https://cdn-icons-png.flaticon.com/512/60/60580.png" width="50" height="50" alt="twiter">
+                </a>
+            </li>
+
+
+        </ul>
+    </footer>
 </body>
 </html>
