--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <section>
         <h3>
-            <FONT COLOR="#000080">Crie sua Conta</FONT>
+            Crie sua Conta
         </h3>
         <div>
             <label for="inputNome">
@@ -65,7 +65,7 @@
     
     <section>
         <h3>
-            <FONT COLOR="#000080">Fazer Login</FONT>
+            Fazer Login
         </h3>
         <div>
             <label for="inputEmailEntrar">
@@ -86,13 +86,13 @@
 
     <section>
         <h4>
-            <br><FONT COLOR="#000080">SOBRE NÓS</FONT>
+            SOBRE NÓS
         </h4>
             <p>
                 Procurando um aplicativo para controlar suas finanças?
             </p>
             <p>
-                Conheça o <b><FONT COLOR="#000080">Manage Money</FONT> </b>, uma solução simples, funcional e intuitiva que lhe permitirá gerenciar suas despesas e receitas. 
+                Conheça o <b>Manage Money</b>, uma solução simples, funcional e intuitiva que lhe permitirá gerenciar suas despesas e receitas. 
             </p>
 
             <div>
@@ -132,7 +132,7 @@
                         </li>
                 </ul>                    
                 <p>
-                    Com o <b><FONT COLOR="#000080">Manage Money</FONT> </b> você acompanha sua evolução financeira através de gráficos. 
+                    Com o <b>Manage Money</b> você acompanha sua evolução financeira através de gráficos. 
                 </p>
                 <p>
                     Também é possível exportar os lançamentos para Excel e PDF.
@@ -148,7 +148,7 @@
             required>
             <label>Email</label>
             <input type="email" name="email" placeholder="Informe seu e-mail"
-            autocomplete="off"required>
+            autocomplete="off" required>
             <label>Mensagem</label>
             <textarea name="message" cols="30" rows="10" placeholder="Digite a sua mensagem"
                 required></textarea>
@@ -159,7 +159,7 @@
     </section>
 
     <h3 class="text"> Obrigado pelo contato!</h3>
-    <p class="paragrafo">Em breve entrarei em contato;)</p>
+    <p class="paragrafo">Em breve entrarei em contato;</p>
     <a href="index.html" class="btn"> Home</a>
     <footer class="Redes">
         <ul>
