--- a/relatorio.html
+++ b/relatorio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,10 +27,21 @@
         }
     </Style>
 </head>
+
 <body>
     <header>
         <h1>Manage Money</h1>
     </header>
+    <section>
+        <div>
+            <audio src="./audios/apresentacaoManageMoney.mp3" controls>
+            </audio>
+        </div>
+        <div>
+            <video width="300" height="180" muted autoplay src="videos/Dinheiro caindo.mp4">
+            </video>
+        </div>
+    </section>
     <!-- RELATÓRIO NOVEMBRO 2022 -->
     <table border="3">
         <thead>
@@ -609,6 +621,599 @@
     <br>
     <br>
 
+    <!-- RELATÓRIO JANEIRO 2023 -->
+    <table border="3">
+        <thead>
+            <tr>
+                <th align="CENTER" colspan="2">Período:01/2023 </th>
+                <th align="CENTER" colspan="2">Saldo anterior <FONT COLOR="BLUE">R$ 1.250,00</FONT>
+                </th>
+                <th align="CENTER" colspan="3">Carteira<FONT COLOR="BLUE">R$ 1400,00</FONT>
+                </th>
+            </tr>
+        </thead>
+        <tr>
+            <td>Data </td>
+            <td>Descrição </td>
+            <td>Categoria </td>
+            <td>Subcategoria </td>
+            <td>Tipo </td>
+            <td>Forma de pagamento </td>
+            <td>Valor </td>
+        </tr>
+
+        <tr>
+            <td>05/01/2023 </td>
+            <td>Matrícula </td>
+            <td>Educaçao </td>
+            <td>Faculdade </td>
+            <td>
+                <font color="#FF0000">Gasto</font>
+            </td>
+            <td>
+                <font color="#FF0000">Débito</font>
+            </td>
+            <td align="right">
+                <font color="#FF0000">600,00</font>
+            </td>
+
+        </tr>
+
+        <tr>
+            <td>05/01/2023 </td>
+            <td>Mensalidade </td>
+            <td>Educaçao </td>
+            <td>Faculdade </td>
+            <td>
+                <font color="#FF0000">Gasto</font>
+            </td>
+            <td>
+                <font color="#FF0000">Débito</font>
+            </td>
+            <td align="right">
+                <font color="#FF0000">600,00</font>
+            </td>
+
+        </tr>
+
+        <tr>
+            <td>05/01/2023 </td>
+            <td>Salário </td>
+            <td>Remuneraçao </td>
+            <td>Salário mensal </td>
+            <td>
+                <font color="#0000ff">Receita</font>
+            </td>
+            <td>
+                <font color="#0000ff">Entrada na conta corrente</font>
+            </td>
+            <td align="right">
+                <font color="#0000ff">5000,00</font>
+            </td>
+
+
+        </tr>
+
+        <tr>
+            <td>06/01/2023 </td>
+            <td>Prestaçao carro 25/48</td>
+            <td> Transporte</td>
+            <td>Financiamento </td>
+            <td>
+                <font color="#FF0000">Gasto</font>
+            </td>
+            <td>
+                <font color="#FF0000">Débito</font>
+            </td>
+            <td align="right">
+                <font color="#FF0000">1200,00</font>
+            </td>
+        </tr>
+
+        <tr>
+            <td>07/01/2023</td>
+            <td>Prestação casa </td>
+            <td>Habitação </td>
+            <td>Financiamento </td>
+            <td>
+                <font color="#FF0000">Gasto</font>
+            </td>
+            <td>
+                <font color="#FF0000">Débito</font>
+            </td>
+            <td align="right">
+                <font color="#FF0000">1500,00</font>
+            </td>
+
+        </tr>
+
+        <tr>
+            <td>07/01/2023 </td>
+            <td>Enel </td>
+            <td>Habitação </td>
+            <td>Energia </td>
+            <td>
+                <font color="#FF0000">Gasto</font>
+            </td>
+            <td>
+                <font color="#FF0000">Débito</font>
+            </td>
+            <td align="right">
+                <font color="#FF0000">200,00</font>
+            </td>
+
+        </tr>
+
+        <tr>
+            <td>07/01/2023 </td>
+            <td>Saneago </td>
+            <td>Habitação </td>
+            <td>Água </td>
+            <td>
+                <font color="#FF0000">Gasto</font>
+            </td>
+            <td>
+                <font color="#FF0000">Débito</font>
+            </td>
+            <td align="right">
+                <font color="#FF0000">80,00</font>
+            </td>
+
+        </tr>
+
+        <tr>
+            <td>07/01/2023 </td>
+            <td>Tim</td>
+            <td>comunicação </td>
+            <td>Internet e plano</td>
+            <td>
+                <font color="#FF0000">Gasto</font>
+            </td>
+            <td>
+                <font color="#FF0000">Débito</font>
+            </td>
+            <td align="right">
+                <font color="#FF0000">180,00</font>
+            </td>
+
+        </tr>
+
+        <tr>
+            <td>10/01/2023 </td>
+            <td>Unimed</td>
+            <td>Saúde </td>
+            <td>Plano de saúde </td>
+            <td>
+                <font color="#FF0000">Gasto</font>
+            </td>
+            <td>
+                <font color="#FF0000">Débito</font>
+            </td>
+            <td align="right">
+                <font color="#FF0000">480,00</font>
+            </td>
+
+        </tr>
+
+        <tr>
+            <td>10/01/2023 </td>
+            <td>Combstível </td>
+            <td>Transporte </td>
+            <td>Gasolina </td>
+            <td>
+                <font color="#FF0000">Gasto</font>
+            </td>
+            <td>
+                <font color="#FF0000">Débito</font>
+            </td>
+            <td align="right">
+                <font color="#FF0000">200,00</font>
+            </td>
+
+        </tr>
+
+        <tr>
+            <td>10/01/2023 </td>
+            <td>Smart Fit </td>
+            <td>Saúde </td>
+            <td>Academia </td>
+            <td>
+                <font color="#FF0000">Gasto</font>
+            </td>
+            <td>
+                <font color="#FF0000">Débito</font>
+            </td>
+            <td align="right">
+                <font color="#FF0000">100,00</font>
+            </td>
+
+        </tr>
+
+        <tr>
+            <td>11/01/2023 </td>
+            <td>Material escolar </td>
+            <td>Faculdade </td>
+            <td>Papelaria </td>
+            <td>
+                <font color="#FF0000">Gasto</font>
+            </td>
+            <td>
+                <font color="#FF0000">Débito</font>
+            </td>
+            <td align="right">
+                <font color="#FF0000">200,00</font>
+            </td>
+
+        </tr>
+
+        <tr>
+            <td>16/01/2023 </td>
+            <td>Open English</td>
+            <td>Educação </td>
+            <td>Curso </td>
+            <td>
+                <font color="#FF0000">Gasto</font>
+            </td>
+            <td>
+                <font color="#FF0000">Débito</font>
+            </td>
+            <td align="right">
+                <font color="#FF0000">150,00</font>
+            </td>
+
+        </tr>
+
+        <tr>
+            <td>20/01/2023 </td>
+            <td>Compras casa</td>
+            <td>Alimentação </td>
+            <td>Supermercado </td>
+            <td>
+                <font color="#FF0000">Gasto</font>
+            </td>
+            <td>
+                <font color="#FF0000">Débito</font>
+            </td>
+            <td align="right">
+                <font color="#FF0000">700,00</font>
+            </td>
+
+        </tr>
+
+        <tr>
+            <td>24/01/2023 </td>
+            <td>Cabelo</td>
+            <td>Higiene e beleza </td>
+            <td>Salao de beleza </td>
+            <td>
+                <font color="#FF0000">Gasto</font>
+            </td>
+            <td>
+                <font color="#FF0000">Débito</font>
+            </td>
+            <td align="right">
+                <font color="#FF0000">200,00</font>
+            </td>
+
+        </tr>
+
+        <tr>
+            <td>24/01/2023 </td>
+            <td>Unha</td>
+            <td>Higiene e beleza </td>
+            <td>Salao de beleza </td>
+            <td>
+                <font color="#FF0000">Gasto</font>
+            </td>
+            <td>
+                <font color="#FF0000">Débito</font>
+            </td>
+            <td align="right">
+                <font color="#FF0000">150,00</font>
+            </td>
+
+        </tr>
+
+
+        <tr>
+            <td>24/01/2023 </td>
+            <td>Sombracelha</td>
+            <td>Higiene e beleza </td>
+            <td>Salao de beleza </td>
+            <td>
+                <font color="#FF0000">Gasto</font>
+            </td>
+            <td>
+                <font color="#FF0000">Débito</font>
+            </td>
+            <td align="right">
+                <font color="#FF0000">50,00</font>
+            </td>
+
+        </tr>
+
+        <tr>
+            <td>25/01/2023 </td>
+            <td>Venda</td>
+            <td>Renda extra </td>
+            <td>Tablet extra</td>
+            <td>
+                <font color="#0000ff">Receita</font>
+            </td>
+            <td>
+                <font color="#0000ff">Entrada na conta corrente </font>
+            </td>
+            <td align="right">
+                <font color="#0000ff">1100,00</font>
+            </td>
+
+        </tr>
+
+        <tr>
+            <td>28/01/2023 </td>
+            <td>Freelancer</td>
+            <td>Renda extra </td>
+            <td>Freelancer</td>
+            <td>
+                <font color="##0000ff">Receita</font>
+            </td>
+            <td>
+                <font color="##0000ff">Entrada na conta corrente</font>
+            </td>
+            <td align="right">
+                <font color="#0000ff">790,00</font>
+            </td>
+
+        </tr>
+
+        <tr>
+            <td>30/01/2023 </td>
+            <td>Parque</td>
+            <td>Lazer</td>
+            <td>Ita Center Park</td>
+            <td>
+                <font color="#FF0000">Gasto</font>
+            </td>
+            <td>
+                <font color="#FF0000">Débito</font>
+            </td>
+            <td align="right">
+                <font color="#FF0000">150,00</font>
+            </td>
+
+        </tr>
+
+        <tr>
+            <td>
+                <font color="#FF0000">Gasto mensal</font>
+            </td>
+            <td>
+                <font color="#FF0000">Débito</font>
+            </td>
+            <td align="right">
+                <font color="#FF0000">R$6740</font>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <font color="##0000ff">Total receita</font>
+            </td>
+            <td>
+                <font color="##0000ff">Entrada na conta corrente</font>
+            </td>
+            <td align="right">
+                <font color="##0000ff">R$8140</font>
+            </td>
+        </tr>
+        </tr>
+
+        <tr>
+            <td>
+                <font color="##0000ff">Total saldo</font>
+            </td>
+            <td>
+                <font color="##0000ff">Total saldo</font>
+            </td>
+            <td align="right">
+                <font color="##0000ff">R$1400</font>
+        </tr>
+
+    </table>
+    <br>
+    <br>
+    <br>
+    <!-- RELATÓRIO FEVEREIRO 2023 -->
+    <table border="3">
+
+        <thead>
+            <!-- Colunas 01 -->
+            <tr align="center">
+                <th colspan="2">Período: 02/2023</th>
+                <th colspan="2">Saldo anterior: <span class="receita"> R$ xx </span> </th>
+                <th colspan="3">Carteira: <span class="receita"> R$ xx </span> </th>
+            </tr>
+            <!-- Colunas 02 -->
+            <tr align="center">
+                <th> DATA </th>
+                <th> DESCRIÇÃO</th>
+                <th> CATEGORIA </th>
+                <th> SUBCATEGORIA</th>
+                <th> TIPO </th>
+                <th> FORMA PGTO </th>
+                <th> VALOR R$</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <!-- Conteúdos -->
+
+            <tr>
+                <td> 05/02/2023 </td>
+                <td> Salário mensal </td>
+                <td> Remuneração </td>
+                <td> Salário mensal </td>
+                <td class="receita"> Receita </td>
+                <td class="receita"> Entrada conta corrente </td>
+                <td class="receita"> 5000,00</td>
+            </tr>
+            <tr>
+                <td> 05/02/2023 </td>
+                <td> Unialfa - Mensalidade</td>
+                <td> Educação </td>
+                <td> Faculdade </td>
+                <td class="gasto"> Gasto </td>
+                <td class="gasto"> Débito </td>
+                <td class="gasto"> 650,00 </td>
+            </tr>
+            <tr>
+                <td> 05/02/2023 </td>
+                <td> Open English </td>
+                <td> Educação </td>
+                <td> Curso </td>
+                <td class="gasto"> Gasto </td>
+                <td class="gasto"> Débito </td>
+                <td class="gasto">200,00 </td>
+            </tr>
+            <tr>
+                <td> 06/02/2023 </td>
+                <td> Compra de alimentos para casa </td>
+                <td> Alimentação </td>
+                <td> Mercado </td>
+                <td class="gasto"> Gasto </td>
+                <td class="gasto"> Débito </td>
+                <td class="gasto"> 800,00 </td>
+            </tr>
+            <tr>
+                <td> 06/02/2023 </td>
+                <td> Prestação Imóvel </td>
+                <td> Habitação </td>
+                <td> Financiamento </td>
+                <td class="gasto"> Gasto </td>
+                <td class="gasto"> Débito </td>
+                <td class="gasto"> 1200,00 </td>
+            </tr>
+            <tr>
+                <td> 07/02/2023 </td>
+                <td> Restaurante </td>
+                <td> Alimentação </td>
+                <td> Restaurante </td>
+                <td class="gasto"> Gasto </td>
+                <td class="gasto"> Débito </td>
+                <td class="gasto"> 150,00 </td>
+            </tr>
+
+
+            <tr>
+                <td> 08/02/2023 </td>
+                <td> Saneago </td>
+                <td> Habitação </td>
+                <td> Água e Esgoto </td>
+                <td class="gasto"> Gasto </td>
+                <td class="gasto"> Débito </td>
+                <td class="gasto"> 115,00 </td>
+            </tr>
+
+            <tr>
+                <td> 10/02/2023 </td>
+                <td> Internet </td>
+                <td> Habitação </td>
+                <td> Internet </td>
+                <td class="gasto"> Gasto </td>
+                <td class="gasto"> Débito </td>
+                <td class="gasto"> 150,00 </td>
+            </tr>
+            <tr>
+                <td> 10/02/2023 </td>
+                <td> Unimed </td>
+                <td> Saúde </td>
+                <td> Plano de Saúde </td>
+                <td class="gasto"> Gasto </td>
+                <td class="gasto"> Débito </td>
+                <td class="gasto"> 300,00 </td>
+            </tr>
+            <tr>
+                <td> 10/02/2023 </td>
+                <td> SmartFit </td>
+                <td> Saúde </td>
+                <td> Academia </td>
+                <td class="gasto"> Gasto </td>
+                <td class="gasto"> Débito </td>
+                <td class="gasto"> 119,00 </td>
+            </tr>
+            <tr>
+                <td> 12/02/2023 </td>
+                <td> Combustível </td>
+                <td> Transporte </td>
+                <td> Combustível </td>
+                <td class="gasto"> Gasto </td>
+                <td class="gasto"> Débito </td>
+                <td class="gasto"> 100,00</td>
+            </tr>
+
+            <tr>
+                <td> 17/02/2023 </td>
+                <td> Freelancer </td>
+                <td> Remuneração </td>
+                <td> Renda Extra </td>
+                <td class="receita"> Receita </td>
+                <td class="receita"> Entrada conta corrente </td>
+                <td class="receita"> 1000,00</td>
+            </tr>
+
+
+
+            <tr>
+                <td> 27/02/2023 </td>
+                <td> Lanche </td>
+                <td> Alimentação </td>
+                <td> FastFood </td>
+                <td class="gasto"> Gasto </td>
+                <td class="gasto"> Débito </td>
+                <td class="gasto"> 80,00 </td>
+            </tr>
+
+            <tr>
+                <td> 30/02/2023 </td>
+                <td> Combustível </td>
+                <td> Transporte </td>
+                <td> Combustível </td>
+                <td class="gasto"> Gasto </td>
+                <td class="gasto"> Débito </td>
+                <td class="gasto"> 150,00</td>
+            </tr>
+            <!-- Cálculos -->
+            <tr>
+                <td colspan="7" bgcolor="Black"></td>
+            </tr>
+            <tr>
+                <td colspan="4"> </td>
+                <td colspan="2" class="cReceita"> Total Receita </td>
+                <td class="cReceita"> 6000,00</td>
+            </tr>
+            <tr>
+                <td colspan="4"> </td>
+                <td colspan="2" class="cGasto"> Total Despesas </td>
+                <td class="cGasto"> 4014,00</td>
+            </tr>
+            <tr>
+                <td colspan="4"> </td>
+                <td colspan="2"> Saldo mês </td>
+                <td class="receita"> 1986,00 </td>
+            </tr>
+            <tr>
+                <td colspan="7" bgcolor="Black"></td>
+            </tr>
+        </tbody>
+
+        <tfoot>
+            <td colspan="7" align="center"> Relatório gerado via Manage Money em 28/03/2022 às 21:38</td>
+        </tfoot>
+
+    </table>
+    <br>
+    <br>
+    <br>
     <!-- RELATÓRIO MARÇO 2023 -->
     <table border="3">
         <thead>
@@ -737,4 +1342,5 @@
         </tfoot>
     </table>
 </body>
+
 </html>
